# Pre

./: .gitignore  CMakeLists copy.txt  CMakeLists.txt
src/: CMakeLists.txt  main.cpp  main.hpp
src/config/: config.c  config.h
src/config/cl/: cl.c  cl.h  diff.cl  diff_cl.c  diff_cl.h  filter.cl  filter_cl.c  filter_cl.h  pseudo.cl  pseudo_cl.c  pseudo_cl.h  tm.cl  tm_cl.c  tm_cl.h
src/config/include/: _vis_cmaera.h  debug.h  device.h  enum.h  global.h  path.h
src/config/lut/: lut.c  lut.h  pseudo.c  pseudo.cl  pseudo.h
src/media/algo/: algo.cpp  algo.h  ir_auto_focusing.cpp  ir_auto_focusing.h  pseudo.h  pseudo_am.cpp  pseudo_am.h
src/media/algo/af/: af.cpp  af.h  af_ir.cpp  af_ir.h  ir_auto_focusing.cpp  ir_auto_focusing.h
src/media/algo/filter/: filter.cpp  filter.h
src/media/algo/gass/: diff.cpp  diff.h
src/media/algo/pseudo/: pseudo.cpp  pseudo.h  pseudo_am.cpp  pseudo_am.h
src/media/algo/tm/: tm.cpp  tm.h
src/media/vi/: v4l2_csi.c  v4l2_csi.h  v4l2_dvp.c  v4l2_dvp.h
src/media/vo/: gst.cpp  gst.h  shm_algo.cpp  shm_algo.h  shm_vo.cpp  shm_vo.h  vo_gst.cpp  vo_gst.h  vo_shm.cpp  vo_shm.h
src/utils/event/: event.cpp  event.h
src/utils/jwrap/: jwrap.cpp  jwrap.h
src/utils/listen/: controller.cpp  controller.h  listen.cpp  listen.h
src/utils/mqtt/: Clients.c  Clients.h  Heap.c  Heap.h  LinkedList.c  LinkedList.h  Log.c  Log.h  MQTTClient.c  MQTTClient.h  MQTTClientPersistence.h  MQTTPacket.c  MQTTPacket.h  MQTTPacketOut.c  MQTTPersistence.c  MQTTPersistence.h  MQTTPersistenceDefault.c  MQTTPersistenceDefault.h  MQTTProtocol.h  MQTTProtocolClient.c  MQTTProtocolClient.h  MQTTProtocolOut.c  Messages.c  SSLSocket.c  SSLSocket.h  Socket.c  Socket.h  SocketBuffer.c  SocketBuffer.h  StackTrace.c  Thread.c  Thread.h  Tree.c  Tree.h  mqtt_client.c  mqtt_client.h  utf-8.c
src/utils/uart/: fpga.cpp  fpga.h  motor.cpp  motor.h  uartclass.cpp  uartclass.h  uartwrap.c  uartwrap.h
test/: CMakeLists.txt  main.cpp
(+11 files in other folders)
